--- a/2fa-totp-for-vpn/.vscode/launch.json
+++ b/2fa-totp-for-vpn/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "script": "${workspaceFolder}/Set-CredFile.ps1",
             "cwd": "${workspaceFolder}",
-            "args": ["-f 'example'", "-u 'mitmih'", "-p '>>>>'", "-i '0123456789ABCDEF'", "-s '<<<<'"]
+            "args": ["-f 'example'", "-u 'mitmih'", "-p '>>>>'", "-i 'QwerTyuiAsdfGhjk'", "-s '<<<<'"]
         }
     ]
 }
